# home-assistant-ziroom

./: .gitignore  README.md  TODO_HACS_PUBLISH.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml  hassfest.yml
custom_components/ziroom/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  light.py  manifest.json  requirements.txt  sensor.py  ziroom_api.py
home-assistant-ziroom/: README.md  hacs.json
home-assistant-ziroom/custom_components/ziroom/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json  ziroom_api.py
tests/: README.md
tests/integration/: test_aircon_control.py  test_curtain_control.py  test_device_states.py  test_light_control.py  test_light_entity_creation.py  test_light_entity_with_coordinator.py  test_light_state.py
tests/unit/: test_ziroom_api.py
