[project]
name = "home-assistant-ziroom"
version = "0.1.0"
description = "Home Assistant integration for Ziroom smart devices"
requires-python = ">=3.9"
dependencies = [
    "pycryptodome>=3.23.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
